fixed collapsed navbar for mobile, need to fix direction it unfolds

--- a/src/styles/Footer.css
+++ b/src/styles/Footer.css
@@ -3,6 +3,7 @@
     left: 0;
     bottom: 0;
     width: 100%;
+    background-color: var(--primary);
     color: var(--secondary) !important;
     text-align: center;
     padding-bottom: 20px;
