--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -4,7 +4,6 @@
 }
 
 .container {
-    margin-left: 10px !important;
     margin-right: 10px !important;
     max-width: 1440px;
 }
@@ -14,8 +13,12 @@
     box-shadow: 1px 10px 8px #888888;
 }
 
-.navbar>.container {
+.navbar-collapse>.nav {
     justify-content: end !important;
+}
+
+.navbar-expand-sm .navbar-collapse {
+    flex-basis: auto;
 }
 
 #nav-link {
@@ -26,8 +29,8 @@
 }
 
 #nav-link:hover {
-    border: dashed 2px;
-    padding: 8px 18px;
+    border: dashed 1px;
+    padding: 9px 19px;
 }
 
 .navbar-brand {
@@ -40,5 +43,5 @@
     font-size: 20px;
     font-family: 'Lobster' !important;
     border-style: dashed;
-    margin-left: 6px !important;
+    margin-left: 10px !important;
 }
